# coursework-2sem

./: CMakeLists.txt  Database.cpp  Database.h  Direction.cpp  Direction.h  Discipline.cpp  Discipline.h  Discipline.txt  DisciplineBase.cpp  DisciplineBase.h  DisciplineForm.cpp  DisciplineForm.h  DisciplineNode.cpp  DisciplineNode.h  FullName.cpp  FullName.h  Grade.h  Group.cpp  Group.h  Makefile  MyFunctions.cpp  MyFunctions.h  Person.cpp  Person.h  Semestr.cpp  Semestr.h  String.cpp  String.h  config.h  file  grades.txt  grades1.txt  grades2.txt  main.cpp  output.txt  retakes1.txt  retakes2.txt  students.txt
